--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,34 +1,76 @@
 <resources>
     <string name="app_name">Travel App</string>
-    <string-array name="origin_cities">
-        <item>Jakarta</item>
-        <item>Bandung</item>
-        <item>Yogyakarta</item>
-        <item>Surabaya</item>
+    <string-array name="stasiun_kereta">
+        <item>Jakarta - Stasiun Gambir</item>
+        <item>Jakarta - Stasiun Pasar Senen</item>
+        <item>Bandung - Stasiun Bandung</item>
+        <item>Surabaya - Stasiun Gubeng</item>
+        <item>Semarang - Stasiun Poncol</item>
+        <item>Yogyakarta - Stasiun Tugu</item>
+        <item>Malang - Stasiun Kota Baru</item>
+        <item>Cirebon - Stasiun Kejaksan</item>
+        <item>Tegal - Stasiun Tegal</item>
+        <item>Purwokerto - Stasiun Purwokerto</item>
+        <item>Surakarta - Stasiun Balapan</item>
+        <item>Salatiga - Stasiun Salatiga</item>
+        <item>Kediri - Stasiun Kediri</item>
+        <item>Madiun - Stasiun Madiun</item>
+        <item>Probolinggo - Stasiun Probolinggo</item>
     </string-array>
-    <integer-array name="city_prices">
-    <item>10</item>
-    <item>20</item>
-    <item>30</item>
-        <item>10</item>
-    </integer-array>
-    <integer-array name="city_distances">
-    <item>80</item> <!-- Jarak Jakarta ke Bandung (dalam kilometer) -->
-    <item>150</item> <!-- Jarak Bandung ke Yogyakarta (dalam kilometer) -->
-    <item>120</item><item>80</item><!-- Jarak Yogyakarta ke Surabaya (dalam kilometer) -->
 
-</integer-array>
-    <string-array name="train_classes">
+    <string-array name="kelas_kereta">
         <item>Ekonomi</item>
         <item>Bisnis</item>
         <item>Eksekutif</item>
+        <item>Prioritas</item>
         <item>Luxury</item>
     </string-array>
-    <integer-array name="train_class_prices">
-        <item>10000</item>
-        <item>30000</item>
-        <item>50000</item>
-        <item>100000</item>
-        <!-- Tambahkan harga untuk pilihan lain sesuai kebutuhan -->
-    </integer-array>
+
+
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_onboarding">OnboardingActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="lorem_ipsum">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
+        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
+        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
+        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
+        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
+        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
+        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
+        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
+        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
+        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
+        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
+        bibendum, vel congue leo egestas.\n\n
+        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
+        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
+        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
+        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
+        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
+        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
+        est.\n\n
+        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
+        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
+        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
+        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
+        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
+        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
+        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
+        convallis.\n\n
+        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
+        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
+        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
+        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
+        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
+        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
+        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
+    </string>
 </resources>
